syntax = "proto3";
package sequencer.sequencer;

import "sequencer/sequencer/arweave_block_info.proto";
import "sequencer/sequencer/arweave_transaction.proto";

option go_package = "github.com/warp-contracts/sequencer/x/sequencer/types";

message NextArweaveBlock {
  ArweaveBlockInfo blockInfo = 1; 
  repeated ArweaveTransaction transactions = 2; 
}

